--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <div class="custom-file img-upload">
         <input type="file" class="custom-file-input" id="imageUploadInput">
         <label class="custom-file-label" for="customFile">Choose file</label>
-        <button id='generateButton'>Generate</button>
     </div>
 
-    <canvas id='canvas'></canvas>
+    <canvas id='canvas' width="2048" height="2048"></canvas>
     <img id='img' src="">
     
 <script src="./main.js" type='module'></script>
