--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
     </div>
 
-    <canvas id='canvas' width="2048" height="2048"></canvas>
+    <!-- Uncomment the line below if you want an image to be 2048x2048 -->
+    <!-- <canvas id='canvas' width="2048" height="2048"></canvas> -->
+    <canvas id='canvas' width="1000" height="1000"></canvas>
     <img id='img' src="">
     
 <script src="./main.js" type='module'></script>
