Updated visual part of the app

--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
     </div>
   </div>
 
+  <div id='cropImage'>
+      <img id='img' src="">
+  </div>
+
   <canvas id='firstCanvas' width="1000" height="1000"></canvas>
   <canvas id='canvas' width="1000" height="1000"></canvas>
 
-  <div id='imgcont'>
-    <img id='img' src="">
-    <button id='btn'>GET IMAGE</button>
-  </div>
-
-  <div id="container"></div>
 
 <script src="./main.js" type="module"></script>
 <script src="./croppie/croppie.js"></script>
