Removed bootstrap from the app

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="./croppie/croppie.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
 
   <title>Apply frames to the image</title>
@@ -18,10 +16,10 @@
 
   <div class="container">
     <p>ატვირთე ფაილი</p>
-    <div class="custom-file img-upload">
-      <input type="file" class="custom-file-input" id="imageUploadInput">
-      <label class="custom-file-label">აირჩიე</label>
+    <div class="img-upload">
+      <input type="file" id="imageUploadInput">
       <br><br>
+
       <select id='selectResolution'>
         <option default selected disabled>ფოტოს ზომა</option>
         <option value="1000">1000x1000 (Default)</option>
