Fixing image upload for mobile devices

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
 
   <div class="container">
-    <p>ატვირთე ფაილი</p>
     <div class="img-upload">
+      <label>ატვირთე ფაილი</label>
       <input type="file" id="imageUploadInput">
       <br><br>
 
