--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
 
 <script src="./main.js" type="module"></script>
 <script src="./croppie/croppie.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
 </body>
 </html>
