Fixing bug on iOS users

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="img-upload">
       <label>ატვირთე ფაილი</label>
-      <input type="file" id="imageUploadInput" accept="image/*">
+      <input type="file" id="imageUploadInput">
       <br><br>
 
       <select id='selectResolution'>
