--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./croppie/croppie.css" />
   <link rel="stylesheet" href="./style.css">
 
-  <title>Apply frames to the image</title>
+  <title>დააყენე გირჩის ფრეიმი</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
       <br><br>
 
       <select id='selectResolution'>
-        <option default selected disabled>ფოტოს ზომა</option>
+        <option default selected disabled>დაგენერირებული ფოტოს ზომა</option>
         <option value="1000">1000x1000 (Default)</option>
         <option value="2048">2048x2048</option>
       </select>
