changed image resolution select tag text content and style

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <br><br>
 
       <select id='selectResolution'>
-        <option default selected disabled>დაგენერირებული ფოტოს ზომა</option>
+        <option default selected disabled>მიღებული ფოტოს ზომა</option>
         <option value="1000">1000x1000 (Default)</option>
         <option value="2048">2048x2048</option>
       </select>
